Add mock-tasks and change button and header

--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-green">Add Task</button>
+<button class="btn btn-green"><fa-icon [icon]="faPlus"></fa-icon> Add Task</button>
