--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -1,18 +1,47 @@
+//general scss for btn
 .btn {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-    -webkit-transition: all 0.2s;
-    transition: all 0.2s;
-    position: relative;
-    font-size: 1.6rem;
-    border: none;
-    cursor: pointer;
-  }
-
-.btn-green {
-  background-color: #55c57a;
-  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  border-radius: 10rem;
+  transition: all 0.2s;
+  position: relative;
+  font-size: 1.5rem;
+  border: none;
+  cursor: pointer;
+  transform: perspective(10rem) translateZ(-0.5rem);
 }
+
+.btn:hover {
+  transform: perspective(10rem) translateZ(0rem);
+  box-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.5);
+}
+
+.btn:hover::after {
+  transform: scaleX(1.5) scaleY(1.5);
+  opacity: 0;
+}
+
+.btn:focus,
+.btn:active {
+  outline: none;
+  transform: perspective(10rem) translateZ(-0.5rem);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
+}
+
+//add-task button
+.btn-green {
+  background-color: #3cc76a;
+  color: #fff;
+  margin-right: 0.5rem;
+}
+
+.btn-green:hover {
+  background-color: #2cce4f;
+}
+
+//edit-task button
+
+
+//delete-task button
