--- a/src/app/components/task/task.component.scss
+++ b/src/app/components/task/task.component.scss
@@ -1,12 +1,48 @@
 .task {
-  background: #f4f4f4;
+  background: #cccccc;
   margin: 5px;
-  padding: 10px 20px;
+  padding: 15px 15px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
 
-  h3 {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+.task-description {
+  display: flex;
+  width: 94%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.task-description:hover {
+  overflow: visible;
+  white-space: normal;
+  text-overflow: ellipsis;
+  height: auto; /* just added this line */
+}
+
+.task-actions {
+  display: flex;
+  justify-content: space-between;
+  width: 6%;
+  margin-left: 1rem;
+}
+
+.task-checkbox {
+  margin-right: 1rem;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.editIcon {
+  margin-top: 0.5rem;
+  color: #0000ffcc;
+}
+
+.deleteIcon {
+  margin-top: 0.3rem;
+  color: #ff0000cc;
 }
