--- a/src/app/components/tasks-board/tasks-board.component.html
+++ b/src/app/components/tasks-board/tasks-board.component.html
@@ -1,11 +1,6 @@
 <div class="tasks-background">
   <div class="tasks-board">
     <app-header></app-header>
-    <app-task></app-task>
-    <app-task></app-task>
-    <app-task></app-task>
-    <app-task></app-task>
-    <app-task></app-task>
-    <app-task></app-task>
+    <app-task *ngFor="let task of tasks" [task]="task"></app-task>
   </div>
 </div>
