--- a/src/app/components/tasks-board/tasks-board.component.scss
+++ b/src/app/components/tasks-board/tasks-board.component.scss
@@ -9,18 +9,18 @@
   background-size: cover;
   background-position: 50% 65%;
   border-radius: 0.5rem;
-  box-shadow: 0 0 1.5rem 0 #aaaaaa inset;
+  box-shadow: 0 0 2.5rem 0 #999999;
 }
 
 .tasks-board {
-  width: 100rem;
-  margin-top: 0.5rem;
+  width: 70rem;
   background-color: #ffffff;
   position: absolute;
-  top: 30%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   opacity: 0.95;
   padding: 3.5rem;
   border-radius: 0.5rem;
+  box-shadow: 0 0 1.5rem 0 #999999 inset;
 }
