Task CRUD part 1

--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,1 +1,4 @@
-<button class="btn btn-green"><fa-icon [icon]="faPlus"></fa-icon> Add Task</button>
+<a class="btn btn-green" routerLink="task/add/0">
+  <fa-icon [icon]="faPlus"></fa-icon>
+  Add Task
+</a>
