--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,8 +20,14 @@ body {
 
 h1 {
   font-size: 3.6rem !important;
+  font-family: cursive;
+  margin-left: 0.5rem;
 }
 
 h3 {
+  font-size: 1.8rem !important;
+}
+
+label {
   font-size: 1.8rem !important;
 }
