--- a/src/app/components/edit-task/edit-task.component.html
+++ b/src/app/components/edit-task/edit-task.component.html
@@ -1,3 +1,4 @@
 <div class="tasks-board">
-  <h1>{{ header }}</h1>
+  <app-header title="{{ header }}" button="Back"></app-header>
+  <app-form [id]="id"></app-form>
 </div>
