--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,4 +1,3 @@
-<a class="btn btn-green" routerLink="task/add/0">
-  <fa-icon [icon]="faPlus"></fa-icon>
-  Add Task
-</a>
+<button class="{{ class }}" [routerLink]="link">
+  {{ name }}
+</button>
