--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <header class="header">
-  <h1>TO DO List</h1>
-  <app-button></app-button>
+  <h1>{{ title }}</h1>
+  <app-button [name]="btnName" [class]="btnClass" [link]="btnLink"></app-button>
 </header>
