--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -9,22 +9,11 @@
     <h3>{{ task?.description | slice: 0:100 }}</h3>
   </div>
   <div class="task-actions">
-    <a [routerLink]="['task/edit', task?.id]">
-      <fa-icon
-        class="editIcon"
-        [icon]="faPen"
-        size="lg"
-        [spin]="false"
-      ></fa-icon>
+    <a class="editIcon" [routerLink]="['task/edit', task?.id]">
+      <fa-icon [icon]="faPen" size="lg"></fa-icon>
     </a>
-    <a>
-      <fa-icon
-        class="deleteIcon"
-        [icon]="faTimes"
-        size="2x"
-        [spin]="false"
-        (click)="deleteTask(task?.id)"
-      ></fa-icon>
+    <a class="deleteIcon" (click)="deleteTask(task?.id)">
+      <fa-icon [icon]="faTimes" size="2x"></fa-icon>
     </a>
   </div>
 </div>
