--- a/src/app/components/tasks-board/tasks-board.component.html
+++ b/src/app/components/tasks-board/tasks-board.component.html
@@ -1,4 +1,4 @@
 <div class="tasks-board">
-  <app-header></app-header>
+  <app-header title="TO DO List"></app-header>
   <app-task *ngFor="let task of tasks" [task]="task"></app-task>
 </div>
