Saving data in LocalStorage

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -2,8 +2,7 @@
   class="form"
   (ngSubmit)="f.form.valid && onSubmit(f)"
   #f="ngForm"
-  novalidate
->
+  novalidate>
   <div class="form-group">
     <label for="description" class="form-label">Description</label>
     <input
@@ -16,6 +15,7 @@
       name="description"
       #description="ngModel"
       [ngClass]="{ 'is-invalid': f.submitted && description.invalid }"
+      maxlength="100"
     />
   </div>
   <div class="form-radio-group-and-button">
