--- a/src/app/components/task/task.component.scss
+++ b/src/app/components/task/task.component.scss
@@ -1,5 +1,5 @@
 .task {
-  background: #cccccc;
+  background-color: #c0c0c0;
   margin: 5px;
   padding: 15px 15px;
   cursor: pointer;
@@ -7,6 +7,10 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+}
+
+.task:hover {
+  background-color: #a0a0a0;
 }
 
 .task-description {
@@ -33,8 +37,8 @@
 
 .task-checkbox {
   margin-right: 1rem;
-  width: 1.7rem;
-  height: 1.7rem;
+  width: 1.8rem;
+  height: 1.8rem;
 }
 
 .editIcon {
@@ -45,4 +49,8 @@
 .deleteIcon {
   margin-top: 0.3rem;
   color: #ff0000cc;
+}
+
+input[type="checkbox"] {
+  filter: invert(0%) hue-rotate(180deg) brightness(1.5);
 }
