--- a/src/app/pages/tasks-board/tasks-board.component.html
+++ b/src/app/pages/tasks-board/tasks-board.component.html
@@ -1,4 +1,5 @@
 <div class="tasks-board">
   <app-header title="TO DO List"></app-header>
   <app-task *ngFor="let task of tasks" [task]="task"></app-task>
+  <h3 *ngIf="!tasks.length">- Welcome, please add some tasks to list</h3>
 </div>
