--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,7 +7,7 @@
 }
 
 html {
-  font-size: 62.5%; /* define 1rem = 10px ; 10px/16px = 62.5% */
+  font-size: 62.5%;
 }
 
 body {
@@ -15,7 +15,7 @@ body {
   font-weight: 500;
   line-height: 1.7;
   padding: 3rem;
-  box-sizing: border-box; /* no extra padding and margin to box */
+  box-sizing: border-box;
 }
 
 h1 {
