--- a/src/app/pages/add-edit-task/add-edit-task.component.html
+++ b/src/app/pages/add-edit-task/add-edit-task.component.html
@@ -1,4 +1,4 @@
-<div class="tasks-board">
+<div class="add-edit-form">
   <app-header title="{{ header }}" button="Back"></app-header>
   <app-form [id]="id"></app-form>
 </div>
