--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -96,3 +96,49 @@
 .cross-stand-alone:active {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5);
 }
+
+@media only screen and (max-width: 992px) {
+  .btn {
+    font-size: 1.6rem;
+    width: 13rem;
+    padding: 1.1rem 0;
+  }
+
+  .cross-stand-alone {
+    @include cross(2.5rem, #000000, 0.3rem);
+  }
+
+  .cross-stand-alone:hover {
+    @include cross(2.5rem, #a23bce, 0.3rem);
+  }
+}
+@media only screen and (max-width: 768px) {
+  .btn {
+    font-size: 1.4rem;
+    width: 11rem;
+    padding: 0.9rem 0;
+  }
+
+  .cross-stand-alone {
+    @include cross(2rem, #000000, 0.3rem);
+  }
+
+  .cross-stand-alone:hover {
+    @include cross(2rem, #a23bce, 0.3rem);
+  }
+}
+@media only screen and (max-width: 600px) {
+  .btn {
+    font-size: 1.2rem;
+    width: 9rem;
+    padding: 0.7rem 0;
+  }
+
+  .cross-stand-alone {
+    @include cross(1.5rem, #000000, 0.2rem);
+  }
+
+  .cross-stand-alone:hover {
+    @include cross(1.5rem, #a23bce, 0.2rem);
+  }
+}
