--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -76,7 +76,7 @@
   &-radio-button {
     height: 3rem;
     width: 3rem;
-    border: 5px solid #000000;
+    border: 0.5rem solid #000000;
     border-radius: 50%;
     display: inline-block;
     position: absolute;
@@ -106,4 +106,165 @@
 
 .is-invalid {
   border-bottom: 0.5rem solid #b11111;
+}
+
+@media only screen and (max-width: 992px) {
+  .form {
+    margin-top: 1.3rem;
+    border-top: 0.3rem solid #000000;
+
+    &-input {
+      font-size: 1.3rem;
+      padding: 1.3rem 1.5rem;
+    }
+
+    &-label {
+      font-weight: 700;
+      margin-bottom: 0.3rem;
+      display: block;
+      transition: all 0.3s;
+    }
+
+    &-radio-group-and-button div:last-child {
+      padding-top: 1.2rem;
+    }
+
+    &-radio-input {
+      display: none;
+    }
+
+    &-radio-label {
+      padding-left: 4rem;
+    }
+
+    &-radio-group {
+      padding-top: 1.6rem;
+    }
+
+    &-radio-group-and-button div:last-child {
+      padding-top: 0.8rem;
+    }
+
+    &-radio-button {
+      height: 2.5rem;
+      width: 2.5rem;
+      border: 0.4rem solid #000000;
+
+      &::after {
+        height: 1.1rem;
+        width: 1.1rem;
+      }
+    }
+  }
+
+  .is-invalid {
+    border-bottom: 0.4rem solid #b11111;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .form {
+    margin-top: 1.1rem;
+    border-top: 0.2rem solid #000000;
+
+    &-group:not(:last-child) {
+      margin: 0.8rem 0 1.5rem;
+    }
+    &-input {
+      font-size: 1.1rem;
+      padding: 1.1rem 1.5rem;
+      border-bottom: 0.2rem solid transparent;
+
+      &:focus {
+        border-bottom: 0.2rem solid #bf55ec;
+      }
+
+      &:focus:invalid {
+        border-bottom: 0.2rem solid #999999;
+      }
+    }
+
+    &-label {
+      font-weight: 500;
+      margin-bottom: 0.3rem;
+    }
+
+    &-radio-group-and-button div:last-child {
+      padding-top: 0.6rem;
+    }
+
+    &-radio-group {
+      padding-top: 1.2rem;
+    }
+
+    &-radio-label {
+      padding-left: 3.5rem;
+    }
+
+    &-radio-button {
+      height: 2rem;
+      width: 2rem;
+      border: 0.3rem solid #000000;
+
+      &::after {
+        height: 0.9rem;
+        width: 0.9rem;
+      }
+    }
+  }
+  .is-invalid {
+    border-bottom: 0.3rem solid #b11111;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .form {
+    margin-top: 0.9rem;
+
+    &-group:not(:last-child) {
+      margin: 0.6rem 0 1rem;
+    }
+
+    &-input {
+      font-size: 0.9rem;
+      padding: 0.9rem 1.2rem;
+    }
+
+    &-label {
+      font-weight: 400;
+      margin-bottom: 0.2rem;
+    }
+
+    &-radio-label {
+      padding-left: 3rem;
+    }
+
+    &-radio-group {
+      padding-top: 0.8rem;
+    }
+
+    &-radio-group-and-button div:last-child {
+      padding-top: 0.2rem;
+    }
+
+    &-radio-button {
+      height: 1.5rem;
+      width: 1.5rem;
+      border: 0.2rem solid #000000;
+
+      &::after {
+        height: 0.7rem;
+        width: 0.7rem;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .form {
+
+    &-radio-group-and-button div:last-child {
+      padding-top: 0.1rem;
+    }
+  }
 }
