--- a/src/app/pages/add-edit-task/add-edit-task.component.scss
+++ b/src/app/pages/add-edit-task/add-edit-task.component.scss
@@ -1,12 +1,38 @@
-.tasks-board {
-    width: 70rem;
-    background-color: #ffffff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 0.95;
-    padding: 3.5rem;
-    border-radius: 0.5rem;
-    box-shadow: 0 0 1.5rem 0 #999999 inset;
+.add-edit-form {
+  width: 70rem;
+  background-color: #ffffff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.95;
+  padding: 3.5rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 1.5rem 0 #999999 inset;
+}
+
+@media only screen and (max-width: 992px) {
+  .add-edit-form {
+    width: 60rem;
+    padding: 3rem;
   }
+}
+@media only screen and (max-width: 768px) {
+  .add-edit-form {
+    width: 50rem;
+    padding: 2.5rem;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .add-edit-form {
+    width: 40rem;
+    padding: 2rem;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .add-edit-form {
+    width: 30rem;
+    padding: 1.5rem;
+  }
+}
