--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,10 +24,84 @@ h1 {
   margin-left: 0.5rem;
 }
 
-h3 {
+h3,
+label {
   font-size: 1.8rem !important;
 }
 
+h1,
+h3,
 label {
-  font-size: 1.8rem !important;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+.last-child div {
+  margin-bottom: 0 !important;
+}
+
+@media only screen and (max-width: 992px) {
+  body {
+    padding: 2rem;
+    font-weight: 400;
+    line-height: 1.5;
+  }
+
+  h1 {
+    font-size: 3rem !important;
+  }
+
+  h3,
+  label {
+    font-size: 1.6rem !important;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    padding: 1.5rem;
+    line-height: 1.4;
+  }
+
+  h1 {
+    font-size: 2.4rem !important;
+  }
+
+  h3,
+  label {
+    font-size: 1.4rem !important;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    padding: 1rem;
+    line-height: 1.2;
+  }
+
+  h1 {
+    font-size: 2rem !important;
+  }
+
+  h3,
+  label {
+    font-size: 1.2rem !important;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  body {
+    line-height: 1;
+  }
+
+  h1 {
+    font-size: 1.6rem !important;
+  }
+
+  h3,
+  label {
+    font-size: 1rem !important;
+  }
 }
