--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -2,7 +2,8 @@
   class="form"
   (ngSubmit)="f.form.valid && onSubmit(f)"
   #f="ngForm"
-  novalidate>
+  novalidate
+>
   <div class="form-group">
     <label for="description" class="form-label">Description</label>
     <input
