--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -31,3 +31,9 @@
     margin-bottom: 0.9rem;
   }
 }
+
+@media only screen and (max-width: 480px) {
+  .header {
+    margin-bottom: 0.7rem;
+  }
+}
