--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -73,6 +73,10 @@ label {
   label {
     font-size: 1.4rem !important;
   }
+
+  body {
+    font-weight: 400;
+  }
 }
 
 @media only screen and (max-width: 600px) {
